Change github tuto version

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,20 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
-
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+# action.yml
+name: 'DD2482: Weekly mail'
+description: 'Automaticly send a summary email with the program, the schedule of the next week and the student's task summary'
+inputs:
+  githubName:
+    description: 'Name of the github repo'
+    required: true
+    default: 'KTH/devops-course'
+  calendarUrl:
+    description: 'Url where one can download the ics calendar file'
+    required: true
+    default : 'https://www.kth.se/social/course/DD2482/calendar/ical/?lang=en'
+  
+runs:
+  using: 'docker'
+  image: 'Dockerfile'
+  env:
+    INPUT_CALENDAR_URL: ${{ inputs.deadline }}
+    INPUT_GITHUB_REPO_NAME: ${{ inputs.event_path }}
+    INPUT_SECRET: ${{ inputs.secret }}
