New test whithout docker

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,31 @@ inputs:
     required: true
     default : 'https://www.kth.se/social/course/DD2482/calendar/ical/?lang=en'
   
-runs:
-  using: 'docker'
-  image: 'Dockerfile'
-  env:
-    INPUT_CALENDAR_URL: ${{ inputs.githubName }}
-    INPUT_GITHUB_REPO_NAME: ${{ inputs.calendarUrl }}
+jobs:
+  weekly-mails:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      # Setup Python
+      - name: Setup Python
+        uses: actions/setup-python@v2.2.1
+        with:
+          python-version: '3.x'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f ./tools/requirements.txt ]; then pip install -r ./tools/requirements.txt; fi
+      # Set timezone to Europe/Stockholm
+      - name: Set timezone
+        run: sudo timedatectl set-timezone Europe/Stockholm
+
+      # Runs a single command using the runners shell
+      - name: Update the statistic issue
+        env:
+          INPUT_CALENDAR_URL: ${{ inputs.githubName }}
+          INPUT_GITHUB_REPO_NAME: ${{ inputs.calendarUrl }}
+        run: python .main.py
