--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,6 @@
 name: DD2482, Weekly mail
-description: Automaticly send a summary email with the program, the schedule of the next week and the student's task summary
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main]
-inputs:
-  githubName:
-    description: Name of the github repo
-    required: true
-    default: 'KTH/devops-course'
-  calendarUrl:
-    description: 'Url where one can download the ics calendar file'
-    required: true
-    default : 'https://www.kth.se/social/course/DD2482/calendar/ical/?lang=en'
+#description: Automaticly send a summary email with the program, the schedule of the next week and the student's task summary
+on: push
   
 jobs:
   weekly-mails:
@@ -23,6 +10,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
       # Setup Python
       - name: Setup Python
         uses: actions/setup-python@v2.2.1
