--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f ./tools/requirements.txt ]; then pip install -r ./tools/requirements.txt; fi
+          pip install -r requirements.txt
       # Set timezone to Europe/Stockholm
       - name: Set timezone
         run: sudo timedatectl set-timezone Europe/Stockholm
