--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -10,6 +10,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
       # Setup Python
       - name: Setup Python
         uses: actions/setup-python@v2.2.1
