--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      # Set timezone to Europe/Stockholm
-      - name: Set timezone
-        run: sudo timedatectl set-timezone Europe/Stockholm
+
 
       # Runs a single command using the runners shell
-      - name: Update the statistic issue
+      - name: Create and send weekly mail
         run: python main.py
