--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,7 @@
 name: DD2482, Weekly mail
-#description: Automaticly send a summary email with the program, the schedule of the next week and the student's task summary
 on:
   schedule:
-  - cron: '0 7,20 * * 1'
+  - cron: '0 7,20 * * *'
   
 jobs:
   weekly-mails:
