--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,5 @@
 name: DD2482, Weekly mail
+description: Automaticly send a summary email with the program, the schedule of the next week and the individual task summary of the student
 on:
   schedule:
   - cron: '0 7,20 * * *'
