--- a/action.yml
+++ b/action.yml
@@ -1,30 +1,24 @@
 name: DD2482, Weekly mail
 description: Automaticly send a summary email with the program, the schedule of the next week and the task summary of the student
-on:
-  schedule:
-  - cron: '0 7,20 * * *'
   
-jobs:
-  weekly-mails:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+runs:
+  # The type of runner that the job will run on
+  using: composite
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-      # Setup Python
-      - name: Setup Python
-        uses: actions/setup-python@v2.2.1
-        with:
-          python-version: '3.x'
+  # Steps represent a sequence of tasks that will be executed as part of the job
+  steps:
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - name: Setup Python
+      uses: actions/setup-python@v2.2.1
+      with:
+        python-version: '3.x'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
 
-      # Runs a single command using the runners shell
-      - name: Create and send weekly mail
-        run: python main.py
+    # Runs a single command using the runners shell
+    - name: Create and send weekly mail
+      run: python main.py
