--- a/action.yml
+++ b/action.yml
@@ -8,17 +8,14 @@ runs:
   # Steps represent a sequence of tasks that will be executed as part of the job
   steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - name: Setup Python
-      uses: actions/setup-python@v2.2.1
-      with:
-        python-version: '3.x'
 
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      run: 
+        python -m pip install -r requirements.txt
+        shell: bash
 
 
     # Runs a single command using the runners shell
     - name: Create and send weekly mail
       run: python main.py
+      shell: bash
