--- a/action.yml
+++ b/action.yml
@@ -10,9 +10,8 @@ runs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
 
     - name: Install dependencies
-      run: 
-        python -m pip install -r requirements.txt
-        shell: bash
+      run: python -m pip install -r requirements.txt
+      shell: bash
 
 
     # Runs a single command using the runners shell
